[정리] 안드로이드 adbrix 플러그인 개발을 위한 정리

--- a/plugin.xml
+++ b/plugin.xml
@@ -18,11 +18,11 @@
         <platform name="android">
             <config-file parent="/*" target="res/xml/config.xml">
                 <feature name="CDVAdbrix">
-                    <param name="android-package" value="cordova-plugin-adbrix.Adbrix.CDVAdbrix" />
+                    <param name="android-package" value="cordova.plugin.adbrix.CDVAdbrix" />
                 </feature>
             </config-file>
             
             <config-file parent="/*" target="AndroidManifest.xml"></config-file>
-            <source-file src="src/android/CDVAdbrix.java" target-dir="src/cordova-plugin-adbrix/Adbrix/CDVAdbrix" />
+            <source-file src="src/android/CDVAdbrix.java" target-dir="src/cordova/plugin/adbrix/CDVAdbrix" />
         </platform>
     </plugin>
